feat: 升级JDK17 #10593 可以reload