@@ -49,10 +49,7 @@ if (toImage.isNullOrBlank() || (toImageRepo.isNullOrBlank() && toImageTag.isNull
     val finalJvmFlags = mutableListOf(
         "-server",
         "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8080",
-        "-Xloggc:/data/workspace/$service/jvm/gc-%t.log",
-        "-XX:+PrintTenuringDistribution",
-        "-XX:+PrintGCDetails",
-        "-XX:+PrintGCDateStamps",
+        "-Xlog:gc*,gc+age=trace:file=/data/workspace/$service/jvm/gc-%t.log:time,level,tags",
         "-XX:MaxGCPauseMillis=200",
         "-XX:+UseG1GC",
         "-XX:NativeMemoryTracking=summary",
